# note

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  ci.sh  install.sh  rustfmt.toml
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  perf.yml  release.yml
crates/note-cli/: Cargo.toml
crates/note-cli/src/: cli.rs  commands.rs  config.rs  editor.rs  main.rs  picker.rs  render.rs
crates/note-cli/tests/: cli.rs
crates/note-core/: Cargo.toml
crates/note-core/src/: content.rs  error.rs  id.rs  lib.rs  link.rs  note.rs  tag.rs  time.rs  title.rs
crates/note-core/tests/: io_free_guard.rs  public_api.rs
crates/note-md/: Cargo.toml
crates/note-md/src/: interchange.rs  lib.rs  wikilink.rs
crates/note-store/: Cargo.toml
crates/note-store/migrations/: V1__init.sql
crates/note-store/src/: error.rs  lib.rs  mint.rs  model.rs  reader.rs  writer.rs
crates/note-store/tests/: bench_backlinks.rs  bench_search.rs  feeds.json  integration.rs  perf.rs
crates/note-tui/: Cargo.toml
crates/note-tui/src/: app.rs  lib.rs
docs/: m0-plan.md
packaging/: nfpm.yaml  note.rb.tmpl
