[package]
name = "note-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO-free domain types, typed ids, and errors for note"

[dependencies]
ulid = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
