[package]
name = "note-md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure markdown parsing, wikilink extraction and md/json conversion for note"

[dependencies]
note-core = { workspace = true }
pulldown-cmark = { version = "0.13", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
