[package]
name = "note-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ratatui-tea terminal UI for note"

[dependencies]
note-core = { workspace = true }
note-store = { workspace = true }
ratatui = "0.30"
ratatui-tea = "0.2"
ratatui-bubbletea-theme = "0.2"
tui-markdown = { version = "0.3.8", default-features = false }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
